UI: add account details to returned json