@@ -1,20 +1,27 @@
 package beanvest.processor.processingv2;
 
+import beanvest.journal.entity.Entity;
+import beanvest.processor.dto.AccountDetailsDto;
 import beanvest.processor.dto.AccountDto2;
 import beanvest.processor.dto.PortfolioStatsDto2;
 import beanvest.processor.dto.StatsV2;
 import beanvest.processor.time.Period;
 import beanvest.result.StatErrors;
 
-import java.util.Set;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class AccountStatsGatherer {
+    private final AccountsTracker accountsTracker;
     Map<String, Map<String, StatsV2>> stats = new HashMap<>();
     List<Period> periods = new ArrayList<>();
     Set<String> processedPeriodTitles = new HashSet<>();
     Set<String> accounts = new HashSet<>();
     LinkedHashSet<String> userErrors = new LinkedHashSet<>();
+
+    public AccountStatsGatherer(AccountsTracker accountsTracker) {
+        this.accountsTracker = accountsTracker;
+    }
 
     public void collectPeriodStats(Period period, Map<String, StatsV2> accountStatsMap) {
         if (processedPeriodTitles.contains(period.title())) {
@@ -22,6 +29,7 @@ public class AccountStatsGatherer {
         }
         periods.add(period);
         processedPeriodTitles.add(period.title());
+
         for (var entry : accountStatsMap.entrySet()) {
             String account = entry.getKey();
             StatsV2 value = entry.getValue();
@@ -41,7 +49,7 @@ public class AccountStatsGatherer {
         var result = new ArrayList<AccountDto2>();
         for (var account : getAccountsSorted()) {
             var statsByPeriod = new HashMap<String, StatsV2>();
-            var accountMetadata = metadata.get(account);
+            var accountMetadata = metadata.get(account.stringId());
 
             for (var period : periods) {
                 var isOpenYet = !accountMetadata.firstActivity().isAfter(period.endDate());
@@ -49,18 +57,21 @@ public class AccountStatsGatherer {
                         .map(date -> date.isBefore(period.startDate()))
                         .orElse(false);
                 if (isOpenYet && !isClosedAlready) {
-                    var stats = this.stats.get(account).get(period.title());
+                    var stats = this.stats.get(account.stringId()).get(period.title());
                     statsByPeriod.put(period.title(), stats);
                 }
             }
-            result.add(new AccountDto2(account, accountMetadata.firstActivity(), accountMetadata.closingDate(), statsByPeriod));
+
+            result.add(new AccountDto2(account.shortId(), accountMetadata.firstActivity(), accountMetadata.closingDate(), statsByPeriod));
         }
 
         return result;
     }
 
-    public List<String> getAccountsSorted() {
-        return accounts.stream().sorted().toList();
+    public List<Entity> getAccountsSorted() {
+        return accountsTracker.getEntities().stream()
+                .sorted(Comparator.comparing(Entity::shortId))
+                .collect(Collectors.toList());
     }
 
     public List<Period> getTimePointsSorted() {
@@ -68,8 +79,13 @@ public class AccountStatsGatherer {
     }
 
     public PortfolioStatsDto2 getPortfolioStats(Map<String, AccountMetadata> metadata, List<String> statsNames) {
+        var accountsSorted = getAccountsSorted().stream()
+                .collect(Collectors.toMap(Entity::shortId,
+                        e -> new AccountDetailsDto(e.name(), e.stringId(), e.group().levels(), e.type()),
+                        (a, b) -> a,
+                        LinkedHashMap<String, AccountDetailsDto>::new));
         return new PortfolioStatsDto2(
-                getAccountsSorted(),
+                accountsSorted,
                 getTimePointsSorted().stream().map(Period::title).toList(),
                 statsNames,
                 getStats(metadata),
